--- a/notification-services/src/main/resources/templates/welcome-email.html
+++ b/notification-services/src/main/resources/templates/welcome-email.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<p>Hello <span th:text="${name}"></span></p>
+<p th:text="${content}"></p>
+<p>Best Regards,</p>
+<p>
+    <em>Khanhs</em> <br />
+</p>
 </body>
 </html>
